IGNITE-16622 Add support for JDK17 (#9849)